# KISS_Dicom_Viewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clang_format.py
.github/workflows/: CI-Windows.yml
apps/: CMakeLists.txt  dicomviewer.cpp  logviewer.cpp  studyexplorer.cpp
cmake/: KissDicomViewerConfig.cmake.in
plugans/: README.md
plugans/PretreatmentPlugan/: CMakeLists.txt  README.md  pretreatmentfiltersplugin.cpp  pretreatmentfiltersplugin.h
src/: CMakeLists.txt  KissDicomViewConfig.h.in
src/dao/: KissDb  dbmanager.cpp  dbmanager.h  logdbmanager.cpp  logdbmanager.h  studydao.cpp  studydao.h
src/dao/Model/: importstudymodel.cpp  importstudymodel.h  sqlimagemodel.cpp  sqlimagemodel.h  sqlstudymodel.cpp  sqlstudymodel.h
src/dao/TabView/: importstudytabview.cpp  importstudytabview.h  kisstabview.cpp  kisstabview.h  sqlimagetabview.cpp  sqlimagetabview.h  sqlstudytabview.cpp  sqlstudytabview.h
src/engine/: KissEngine  PluganInterface.h  stable.h  stdafx.h
src/global/: KissDicomViewConfig.h  KissGlobal  global.cpp  global.h  stable.h  stdafx.h  studyrecord.h
src/resources/: dicomviewer.qrc  style.qrc
src/resources/Style/: style.qss
src/resources/xml/: modalityprop.xml
src/script/: KissScript  echoscu.cpp  echoscu.h  exportimagethread.cpp  exportimagethread.h  imageloadthread.cpp  imageloadthread.h  importdcmfilethread.cpp  importdcmfilethread.h  scandcmfilethread.cpp  scandcmfilethread.h  storescpthread.cpp  storescpthread.h
src/view/: KissView
src/view/currency/: gridpopwidget.cpp  gridpopwidget.h  gridpopwidget.ui  videocontrolview.cpp  videocontrolview.h  videocontrolview.ui
src/view/dicom2d/: dicomimagelabel.cpp  dicomimagelabel.h  dicomimageview.cpp  dicomimageview.h  exportimagedialog.cpp  exportimagedialog.h  exportimagedialog.ui  filewatcherthread.cpp  filewatcherthread.h  modalityproperty.cpp  modalityproperty.h  thumbnailbarwidget.cpp  thumbnailbarwidget.h  viewcontainerwidget.cpp  viewcontainerwidget.h
src/view/dicom2d/GraphicsItem/: abstractpathitem.cpp  abstractpathitem.h  graphicsangleitem.cpp  graphicsangleitem.h  graphicsarrowitem.cpp  graphicsarrowitem.h  graphicscliprectitem.cpp  graphicscliprectitem.h  graphicscobbangleitem.cpp  graphicscobbangleitem.h  graphicscrossitem.cpp  graphicscrossitem.h  graphicsellipseitem.cpp  graphicsellipseitem.h  graphicslineitem.cpp  graphicslineitem.h  graphicsrectitem.cpp  graphicsrectitem.h  graphicssimpletextitem.cpp  graphicssimpletextitem.h  graphicstextmarkdialog.cpp  graphicstextmarkdialog.h  graphicstextmarkdialog.ui  graphicstextmarkitem.cpp  graphicstextmarkitem.h  graphicstumoritem.cpp  graphicstumoritem.h
src/view/dicom2d/ImageData/: imageinstance.cpp  imageinstance.h  imageinstancedata.cpp  imageinstancedata.h  seriesinstance.cpp  seriesinstance.h
src/widget/: KissWidget  dicomtagswidget.cpp  dicomtagswidget.h  dicomtagswidget.ui  importdcmwidget.cpp  importdcmwidget.h  importdcmwidget.ui  scpsettingview.cpp  scpsettingview.h  scpsettingview.ui
src/window/: KissWindow  dicomviewer.cpp  dicomviewer.h  dicomviewer.ui  logdbwidget.cpp  logdbwidget.h  logdbwidget.ui  studyexplorerwidget.cpp  studyexplorerwidget.h  studyexplorerwidget.ui
